dfir_rs/tests/snapshots/surface_examples__example_4_neighbors.snap
---
source: dfir_rs/tests/surface_examples.rs
expression: output
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter(vec![0])</code>"/]:::pullClass
2v1[\"(2v1) <code>source_stream(edges_recv)</code>"/]:::pullClass
3v1[\"(3v1) <code>map(|v| (v, ()))</code>"/]:::pullClass
4v1[\"(4v1) <code>join()</code>"/]:::pullClass
5v1[\"(5v1) <code>flat_map(|(src, (_, dst))| [src, dst])</code>"/]:::pullClass
6v1[\"(6v1) <code>unique()</code>"/]:::pullClass
7v1[/"(7v1) <code>for_each(|n| println!(&quot;Reached: {}&quot;, n))</code>"\]:::pushClass
3v1-->|0|4v1
1v1-->3v1
2v1-->|1|4v1
4v1-->5v1
6v1-->7v1
5v1-->6v1
subgraph sg_1v1 ["sg_1v1"]
    3v1
    6v1
    7v1
    subgraph sg_1v1_var_my_join ["var <tt>my_join</tt>"]
        4v1
        5v1
    end
    subgraph sg_1v1_var_origin ["var <tt>origin</tt>"]
        1v1
    end
    subgraph sg_1v1_var_stream_of_edges ["var <tt>stream_of_edges</tt>"]
        2v1
    end
end

Reached: 0
Reached: 1
Reached: 3
