dfir_rs/tests/snapshots/surface_examples__example_6_unreachability.snap
---
source: dfir_rs/tests/surface_examples.rs
expression: output
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>None source_iter(vec![0])</code>"/]:::pullClass
2v1[\"(2v1) <code>None source_stream(pairs_recv)</code>"/]:::pullClass
3v1[/"(3v1) <code>None tee()</code>"\]:::pushClass
4v1[\"(4v1) <code>None map(|v| (v, ()))</code>"/]:::pullClass
5v1[\"(5v1) <code>None join()</code>"/]:::pullClass
6v1[\"(6v1) <code>None flat_map(|(src, ((), dst))| [src, dst])</code>"/]:::pullClass
7v1[\"(7v1) <code>None union()</code>"/]:::pullClass
8v1[/"(8v1) <code>None tee()</code>"\]:::pushClass
9v1[/"(9v1) <code>None flat_map(|(src, dst)| [src, dst])</code>"\]:::pushClass
10v1[/"(10v1) <code>None tee()</code>"\]:::pushClass
11v1[\"(11v1) <code>None difference()</code>"/]:::pullClass
12v1[/"(12v1) <code>None unique()</code>"\]:::pushClass
13v1[/"(13v1) <code>None for_each(|v| println!(&quot;Received vertex: {}&quot;, v))</code>"\]:::pushClass
14v1[/"(14v1) <code>None for_each(|v| println!(&quot;unreached_vertices vertex: {}&quot;, v))</code>"\]:::pushClass
15v1["(15v1) <code>None handoff</code>"]:::otherClass
16v1["(16v1) <code>None handoff</code>"]:::otherClass
17v1["(17v1) <code>None handoff</code>"]:::otherClass
18v1["(18v1) <code>None handoff</code>"]:::otherClass
2v1-->3v1
4v1-->|0|5v1
8v1-->|0|15v1
3v1-->|1|16v1
5v1-->6v1
1v1-->|base|7v1
6v1-->|cycle|7v1
7v1-->8v1
9v1-->10v1
3v1-->|0|9v1
10v1-->|0|17v1
8v1-->|1|18v1
12v1-->13v1
10v1-->|1|12v1
11v1-->14v1
15v1-->4v1
16v1-->|1|5v1
17v1-->|pos|11v1
18v1--x|neg|11v1; linkStyle 18 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    15v1
    1v1
    4v1
    5v1
    6v1
    7v1
    8v1
    subgraph sg_1v1_var_my_join ["var <tt>my_join</tt>"]
        5v1
        6v1
    end
    subgraph sg_1v1_var_origin ["var <tt>origin</tt>"]
        1v1
    end
    subgraph sg_1v1_var_reached_vertices ["var <tt>reached_vertices</tt>"]
        7v1
        8v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    2v1
    3v1
    9v1
    10v1
    12v1
    13v1
    subgraph sg_2v1_var_all_vertices ["var <tt>all_vertices</tt>"]
        9v1
        10v1
    end
    subgraph sg_2v1_var_stream_of_edges ["var <tt>stream_of_edges</tt>"]
        2v1
        3v1
    end
end
subgraph sg_3v1 ["sg_3v1 stratum 1"]
    11v1
    14v1
    subgraph sg_3v1_var_unreached_vertices ["var <tt>unreached_vertices</tt>"]
        11v1
    end
end

Received vertex: 5
Received vertex: 10
Received vertex: 0
Received vertex: 3
Received vertex: 6
Received vertex: 11
Received vertex: 12
unreached_vertices vertex: 11
unreached_vertices vertex: 12
